--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,11 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: '3.8' # Replace with your desired Python version
+    
+    - name: Set environment variables
+      env:
+        OPEN_API_KEY: ${{ secrets.OPEN_API_KEY }} # Replace with the name of your secret
+      run: echo "OPEN_API_KEY=$OPEN_API_KEY" >> $GITHUB_ENV
 
     - name: Install dependencies
       run: |
