--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,47 +1,47 @@
 name: Check for new files
 
 on:
-  push:
-    branches:
-      - master
-    paths:
-      - 'newdata/**'
+    push:
+        branches:
+            - master
+        paths:
+            - "newdata/**"
 
 jobs:
-  check_files:
-    runs-on: ubuntu-latest
+    check_files:
+        runs-on: ubuntu-latest
 
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+        steps:
+            - name: Checkout code
+              uses: actions/checkout@v2
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.8.6' # Replace with your desired Python version
-    
-    - name: Set environment variables
-      env:
-        OPEN_API_KEY: ${{ secrets.OPEN_API_KEY }} # Replace with the name of your secret
-        PINECONE_API_KEY: ${{ secrets.PINECONE_API_KEY }} # Replace with the name of your secret
-        PINECONE_ENV: ${{ secrets.PINECONE_ENV }} # Replace with the desired value
-        PINECONE_INDEX: ${{ secrets.PINECONE_INDEX }}
-      run: |
-        echo "OPEN_API_KEY=$OPEN_API_KEY" >> $GITHUB_ENV
-        echo "PINECONE_API_KEY=$PINECONE_API_KEY" >> $GITHUB_ENV
-        echo "PINECONE_ENV=$PINECONE_ENV" >> $GITHUB_ENV
-        echo "PINECONE_INDEX=$PINECONE_INDEX" >> $GITHUB_ENV
+            - name: Set up Python
+              uses: actions/setup-python@v2
+              with:
+                  python-version: "3.8.17" # Replace with your desired Python version
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt # Replace with your project's dependency installation command if needed
+            - name: Set environment variables
+              env:
+                  OPEN_API_KEY: ${{ secrets.OPEN_API_KEY }} # Replace with the name of your secret
+                  PINECONE_API_KEY: ${{ secrets.PINECONE_API_KEY }} # Replace with the name of your secret
+                  PINECONE_ENV: ${{ secrets.PINECONE_ENV }} # Replace with the desired value
+                  PINECONE_INDEX: ${{ secrets.PINECONE_INDEX }}
+              run: |
+                  echo "OPEN_API_KEY=$OPEN_API_KEY" >> $GITHUB_ENV
+                  echo "PINECONE_API_KEY=$PINECONE_API_KEY" >> $GITHUB_ENV
+                  echo "PINECONE_ENV=$PINECONE_ENV" >> $GITHUB_ENV
+                  echo "PINECONE_INDEX=$PINECONE_INDEX" >> $GITHUB_ENV
 
-    - name: Run Python script
-      id: run_script
-      run: python ingestdata.py # Replace with the path to your Python script
+            - name: Install dependencies
+              run: |
+                  python -m pip install --upgrade pip
+                  pip install -r requirements.txt # Replace with your project's dependency installation command if needed
 
-    - name: Delete files
-      if: steps.run_script.outcome == 'success'
-      run: |
-        rm -rf $GITHUB_WORKSPACE/newdata/*
+            - name: Run Python script
+              id: run_script
+              run: python ingestdata.py # Replace with the path to your Python script
+
+            - name: Delete files
+              if: steps.run_script.outcome == 'success'
+              run: |
+                  rm -rf $GITHUB_WORKSPACE/newdata/*
