--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,8 +43,21 @@ jobs:
               id: run_script
               run: python ingestdata.py # Replace with the path to your Python script
 
-            - name: Delete files
-              uses: canastro/copy-file-action@master
+            - name: Move files
+              uses: actions/github-script@v4
               with:
-                  source: "newdata/*"
-                  target: "data/"
+                  script: |
+                      const fs = require('fs');
+                      const path = require('path');
+
+                      const sourceDir = path.join(process.env.GITHUB_WORKSPACE, 'source');
+                      const destinationDir = path.join(process.env.GITHUB_WORKSPACE, 'destination');
+
+                      const files = fs.readdirSync(sourceDir);
+                      files.forEach(file => {
+                        const sourcePath = path.join(sourceDir, file);
+                        const destinationPath = path.join(destinationDir, file);
+                        fs.renameSync(sourcePath, destinationPath);
+                      });
+
+                      console.log(`All files moved successfully from 'source' to 'destination'.`);
